--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=fishing-config-47
 
+server.port=8080
 #Data Source Properties
 spring.datasource.driverClassName = org.postgresql.Driver
 spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
