--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.driverClassName = org.postgresql.Driver
 spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
 spring.datasource.password	= postgres
 #JPA Properties
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql = TRUE
-spring.jpa.properties.hibernate.show_sql = TRUE
-spring.jpa.hibernate.ddl-auto = create
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.format_sql = TRUE
+#spring.jpa.properties.hibernate.show_sql = TRUE
+spring.jpa.hibernate.ddl-auto = update
